[gd_scene load_steps=3 format=3 uid="uid://b8xk2yv4qjwqr"]

[ext_resource type="Script" path="res://traps/base_trap.gd" id="1_trap_script"]

[sub_resource type="CircleShape2D" id="CircleShape2D_detection"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_damage"]
radius = 50.0

[node name="BaseTrap" type="Node2D"]
script = ExtResource("1_trap_script")

[node name="Sprite" type="Node2D" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_detection")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_damage")

[node name="ActivationTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true 